# autobean

./: .gitignore  .mypy.ini  .travis.yml  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build.yml  release.yml
autobean/include/: README.md  __init__.py  plugin.py
autobean/include/tests/: test_runner.py
autobean/narration/: README.md  __init__.py  comments.py  plugin.py
autobean/narration/tests/: test_runner.py
autobean/print/: __main__.py
autobean/refactor/: README.md  bar.py  beancount.lark  foo.prof  foo.py  parser.py  printer.py  token_store.py
autobean/refactor/meta_models/: base.py  meta_models.py
autobean/refactor/modelgen/: descriptor.py  field_descriptor.py  generate.py  modelgen_test.py  raw_model.mako
autobean/refactor/models/: __init__.py  (+58 more)
autobean/share/: README.md  __init__.py  directives.py  fill_residuals.py  include.py  include_context.py  link_accounts.py  map_residual_accounts.py  open_subaccounts.py  plugin.py  policy.py  policy_lib.py  policy_lib_test.py  select_viewpoint.py  split_account.py  split_postings.py  utils.py  viewpoint_lib.py
autobean/sorted/: README.md  __init__.py  plugin.py
autobean/stock_split/: README.md  __init__.py  plugin.py  plugin_test.py
autobean/truelayer/: README.md  __init__.py  importer.py
autobean/utils/: compare.py  deduplicate.py  error_lib.py  error_logger.py  plugin_base.py  plugin_lib.py  plugin_test_util.py  plugin_test_utils.py  typed_custom.py
autobean/xcheck/: README.md  __init__.py  plugin.py
(+342 files in other folders)
